--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Welcome to my github page</h1>
-<p>This is a paragraph.</p>
+<h1>Jani Silvander's Github Page</h1>
+<p>Jani is experienced and skilled IC Designer with a passion for RTL designs and verification, adept in utilizing SystemVerilog and VHDL. Proficient in Python, C/C++, LabView enhancing versatility in design and verification processes. Has background in working with both ASIC and FPGA technologies, showcasing expertise with Xilinx and Altera products. Beyond IC design, Jani has a history in PCB designs and contributing to R&D laboratories for the creation of cutting-edge electronic devices.</p>
+Key Skills:
+<ul>
+  <li>RTL Designs</li>
+  <li>SystemVerilog</li>
+  <li>VHDL</li>
+  <li>ASIC and FPGA</li>
+  <li>Questa</li>
+  <li>Xilinx and Altera Products</li>   
+  <li>Python</li>
+  <li>C/C++</li>
+  <li>PCB Designs (KiCad)</li>
+  <li>AVR/ARM programming</li>
+</ul>
 
+<br><p>
+Personal Attributes:<br>
+
+A collaborative team player with a sense of humor, Jani is known for his helpful and friendly demeanor. His ability to seamlessly integrate with teams ensures a positive and productive work environment.
+</p>
+<br><p>
+Interests:<br>
+
+Outside of the professional realm, Jani is drawn to the sea, finding joy in activities such as sailing and swimming. When not on the water, he enjoys cycling, skiing, and engaging in sports like ice hockey and floorball.
+
+Jani Silvander is a dynamic IC Designer with a holistic skill set, contributing both professionally and personally to any team he joins. His dedication to innovation and love for outdoor activities make him a well-rounded and valuable professional.
+</p>
+<br><br>
+Contact:<br>
+<a href="https://www.linkedin.com/in/jani-silvander-3605a968/">
+https://www.linkedin.com/in/jani-silvander-3605a968</a>
 </body>
 </html>
