--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
-<h1>Jani Silvander's Github Page</h1>
+  <div>
+    <h1>Jani Silvander's Github Page</h1>
 <p>Jani is experienced and skilled IC Designer with a passion for RTL designs and verification, adept in utilizing SystemVerilog and VHDL. Proficient in Python, C/C++, LabView enhancing versatility in design and verification processes. Has background in working with both ASIC and FPGA technologies, showcasing expertise with Xilinx and Altera products. Beyond IC design, Jani has a history in PCB designs and contributing to R&D laboratories for the creation of cutting-edge electronic devices.</p>
 Key Skills:
 <ul>
@@ -37,5 +38,7 @@ Jani Silvander is a dynamic IC Designer with a holistic skill set, contributing 
 Contact:<br>
 <a href="https://www.linkedin.com/in/jani-silvander-3605a968/">
 https://www.linkedin.com/in/jani-silvander-3605a968</a>
+  </div>
+
 </body>
 </html>
