--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
   <div>
-    <img src="boards.jpg" alt="Boards" style="width:auto;">
+    <img src="boards.jpeg" alt="Boards" style="width:auto;">
     <h1>Jani Silvander's Github Page</h1>
 <p>Jani is experienced and skilled IC Designer with a passion for RTL designs and verification, adept in utilizing SystemVerilog and VHDL. Proficient in Python, C/C++, LabView enhancing versatility in design and verification processes. Has background in working with both ASIC and FPGA technologies, showcasing expertise with Xilinx and Altera products. Beyond IC design, Jani has a history in PCB designs and contributing to R&D laboratories for the creation of cutting-edge electronic devices.</p>
 Key Skills:
