--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ Contact:<br>
 <a href="https://www.linkedin.com/in/jani-silvander-3605a968/">
 https://www.linkedin.com/in/jani-silvander-3605a968</a>
 <br><br>
-Projectst:<br>
+Projects:<br>
 <a href="https://github.com/bakadachi/myiplibrary">
-myiplibrary</a>
+myiplibrary</a> - Some examples
     
   </div>
 
