--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ https://www.linkedin.com/in/jani-silvander-3605a968</a>
 <br><br>
 Projects:<br>
 <a href="https://github.com/bakadachi/myiplibrary">
-myiplibrary</a> - Some examples
+myiplibrary</a> - Some examples, still in very early stage [10th of March 2024]
     
   </div>
 
