--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ https://www.linkedin.com/in/jani-silvander-3605a968</a>
 <br><br>
 Projects:<br>
 <a href="https://github.com/bakadachi/myiplibrary">
-myiplibrary</a> - Some examples, still in very early stage [10th of March 2024]
+myiplibrary</a> - I am in process of creating small ip library, it is still in very early stage though.
+<a href="https://github.com/bakadachi/Varaajamonitori">
+Varaajamonitori</a> - A water boiler that has an option to be heated with wood needs a spare water tank, pump and a reverse pump. This is experiment to make controller that measures the heat and controls pumps accordingly. 
     
   </div>
 
