--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Projects:<br>
 <a href="https://github.com/bakadachi/myiplibrary">
 myiplibrary</a> - I am in process of creating small ip library, it is still in very early stage though.
 <a href="https://github.com/bakadachi/Varaajamonitori">
-Varaajamonitori</a> - A water boiler that has an option to be heated with wood needs a spare water tank, pump and a reverse pump. This is experiment to make controller that measures the heat and controls pumps accordingly. 
+Varaajamonitori</a> - A water boiler that has an option to be heated with wood needs a spare water tank, pump and a reverse pump. This is experiment to make controller that measures the heat and controls pumps accordingly. <b>[ACTIVE]</b>
     
   </div>
 
