--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@ Projects:<br>
 myiplibrary</a> - I am in process of creating small ip library, it is still in very early stage though.
 <a href="https://github.com/bakadachi/Varaajamonitori">
 Varaajamonitori</a> - A water boiler that has an option to be heated with wood needs a spare water tank, pump and a reverse pump. This is experiment to make controller that measures the heat and controls pumps accordingly. <b>[ACTIVE]</b>
-    <img src="varaaja.jpg" alt="varaaja" style="width:auto;">
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+</style>
+<body>
+
+<a target="_blank" href="varaaja.jpg">
+  <img src="varaaja.jpg" alt="varaaja">
+</a>
 <a href="https://github.com/bakadachi/VaraajamonitoriAVR">
 VaraajamonitoriAVR</a> - A program to operate Varaajamonitori device.<b>[ACTIVE]</b>
     
