--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
+<style>
+img {
+  border: 1px solid #ddd; /* Gray border */
+  border-radius: 4px;  /* Rounded border */
+  padding: 5px; /* Some padding */
+  width: 150px; /* Set a small width */
+}
+
+/* Add a hover effect (blue shadow) */
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+</style>
 <body>
 
   <div>
@@ -45,11 +58,6 @@ Projects:<br>
 myiplibrary</a> - I am in process of creating small ip library, it is still in very early stage though.
 <a href="https://github.com/bakadachi/Varaajamonitori">
 Varaajamonitori</a> - A water boiler that has an option to be heated with wood needs a spare water tank, pump and a reverse pump. This is experiment to make controller that measures the heat and controls pumps accordingly. <b>[ACTIVE]</b>
-img:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-}
-</style>
-<body>
 
 <a target="_blank" href="varaaja.jpg">
   <img src="varaaja.jpg" alt="varaaja">
